# graphics-programming-SNU-2022

FInal_Project/: 그래픽스 프로그래밍 과제 5 보고서.docx
FInal_Project/Flame Simulation/: Flame Simulation.vcxproj  Flame Simulation.vcxproj.filters  Flame.cpp  Flame.h  Main.cpp  Material.cpp  Material.h  ModelFragment.txt  ModelFragmentNormal.txt  Particle.cpp  Particle.h  ParticleFragment.txt  ParticleGeometry.txt  ParticleVertex.txt  Scene.cpp  Scene.h  Shader.cpp  Shader.h  camera.h
FInal_Project/Flame Simulation/Debug/: Flame Simulation.exe.recipe  main.obj.enc  object.obj.enc  particle.obj.enc  vc142.idb
FInal_Project/Flame Simulation/Debug/Flame Simulation.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Flame Simulation.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FInal_Project/Release/: ParticleVertex.txt
HW1/: Graphics Assignment Submission Tip.pptx
HW1/2022-25448_박기범_hw/problem1/: CMakeLists.txt
HW1/2022-25448_박기범_hw/problem1/shaders/: shader.vs
HW1/2022-25448_박기범_hw/problem1/src/: main.cpp  shader.h
HW1/2022-25448_박기범_hw/problem2/: CMakeLists.txt
HW1/2022-25448_박기범_hw/problem3/: CMakeLists.txt
HW2/2022-25448_박기범_hw/: CMakeLists.txt
HW2/2022-25448_박기범_hw/shaders/: shader.fs  shader.vs  shader_skybox.fs  shader_skybox.vs
HW2/2022-25448_박기범_hw/src/: camera.h  geometry_primitives.h  main.cpp  math_utils.h  texture.h  texture_cube.h
HW3/2022-25448_박기범_hw/problem12/: CMakeLists.txt
HW3/2022-25448_박기범_hw/problem3/: CMakeLists.txt
HW4/2022-25448박기범hw4/: CMakeLists.txt  readme.txt
HW4/2022-25448박기범hw4/shaders/: debug.fs  shader_lighting.fs  shader_lighting.vs  shader_skybox.fs  shadow.fs  shadow.vs
HW4/2022-25448박기범hw4/src/: camera.h  light.h  main.cpp  math_utils.h  mesh.h  model.h  scene.h  texture.h
HW5/2022-25448 (2)/hw5/: CMakeLists.txt
HW5/2022-25448 (2)/hw5/src/: main.cpp  (+6 more)
(+45 files in other folders)
